Changed "Guest' to "Away"

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div>
-                <h1>GUEST</h1>
+                <h1>AWAY</h1>
                 <h2 id="guestPoints">0</h2>
                 <div class="guestPoints">
                     <button onclick="onePointGuest()">+1</button>
