--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Basketball Scoreboard</title>
+    <link rel="icon" type="image/x-icon" href="/images/basketball-favicon.png">
 </head>
 
 <body>
